Open additional packages for tests on JDK 16